first case of ngrx calling to backend and getting nugget id's, adding to store and displaying on screen

--- a/angular.json
+++ b/angular.json
@@ -142,6 +142,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "nuggets-ngrx2"
+    }
+  },
+  "defaultProject": "nuggets-ngrx2",
+  "cli": {
+    "defaultCollection": "@ngrx/schematics"
+  }
 }
