--- a/angular.json
+++ b/angular.json
@@ -48,7 +48,9 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/hammerjs/hammer.js"
+            ]
           },
           "configurations": {
             "production": {
